--- a/sudoku/src/style.css
+++ b/sudoku/src/style.css
@@ -35,11 +35,24 @@
   align-items: center;         /* center horizontally */}
 
  
- /* Square for Sudoku 9x9 */
+ /* Standard square for Sudoku 9x9 */
    .square {    
    width: 5vw;         
    height: 5vw;          
-   border: 2px solid black;}
+   border: 1px solid black;
+    display: flex;
+    justify-content: center;  /* horizontal center */
+    align-items: center;   
+
+  }
+
+.square.border-right {
+  border-right: 4px solid black;
+}
+
+.square.border-bottom {
+  border-bottom: 4px solid black;
+}
 
   .container { 
   display: flex;}
@@ -125,10 +138,6 @@ a:link {
     display: block;
   }
   
-  .title {
-    font-size: clamp(2rem, 4vw, 4rem); text-align: center; 
-    margin-bottom: 1vh;}
-  
   .sidenav {
   position: fixed; top: 0;
   display: flex; flex-direction: column;
@@ -157,38 +166,7 @@ a:link {
   justify-content: center;   
   align-items: center;         }
 
- 
- /* Square for Sudoku 9x9 */
-   .square {    
-   width: 5vw;         
-   height: 5vw;          
-   border: 2px solid black;}
 
-  .container { 
-  display: flex;}
-
-  .container-right{ 
-  margin-left: 0px;} 
-
- /* Contains Sudoku squares */
-  .sudoku-board{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;  /* horizontal center */
-  align-items: center;      /* vertical center */}
-
-
-.timer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 1em;
-  border: 0.2em solid black;
-  padding: 1em;
-  width: 10vw;
-  height: 5vh;
-  margin-top: 3vh;
-}
 .title-scoreboard {
     font-size: clamp(2rem, 4vw, 4rem); 
     text-align: center;
