--- a/sudoku/src/style.css
+++ b/sudoku/src/style.css
@@ -220,7 +220,11 @@ a:link {
 
 
   .topnav {
+    position : fixed; top: 0;
     display: flex;
+    height: 10vh;
+    flex-direction: row;
+    top: 0;
     justify-content: space-around; 
     align-items: center;  
     background-color: black;
