refactor: update TopNav component naming and styles

--- a/sudoku/src/style.css
+++ b/sudoku/src/style.css
@@ -223,13 +223,16 @@ a:link {
     position : fixed; top: 0;
     display: flex;
     height: 10vh;
+    width: 100%;
     flex-direction: row;
     top: 0;
     justify-content: space-around; 
-    align-items: center;  
     background-color: black;
     padding: 10px 0;
-    width: 100%;
+    left: 0;         
+    align-items: center;  
+    right: 0;  
+    z-index: 1000;    
   } 
   
 
